rename company => seller
