# app/routes.js
@@ -1,14 +1,13 @@
 const authMiddleware = require('./middlewares/auth'),
   users = require('./controllers/users'),
-  companies = require('./controllers/companies');
-  
+  sellers = require('./controllers/sellers');
+
 exports.init = app => {
   app.get('/api/status', [], users.check);
 
   app.post('/api/users', [], users.create);
   app.post('/api/users/login', [], users.logIn);
 
-  app.post('/api/companies', [], companies.create);
-  app.post('/api/companies/login', [], companies.logIn);
-
+  app.post('/api/sellers', [], sellers.create);
+  app.post('/api/sellers/login', [], sellers.logIn);
   };
